[Add] Added fixed nav bar and background color - STRETCH

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -74,24 +74,40 @@ h1, h2, h3, h4, h5 {
 
 
 .navigation{
+	position: fixed;
+	height: 70px;
+	top: 0;
+	width: 100%;
 	padding: 0;
+	background-color: #ccc;
+	z-index: 999;
+
 }
 
 .navigation a{
+	margin-top: 40px;
 	margin-right: 20px; 
 	padding: 0;
 	vertical-align: middle;
 	text-align: center;
 	font-size: 20px;
-	color: gray;
+	color: #333;
 	text-decoration: none;
 
+}
+
+.navigation a:hover{
+	color: forestgreen;
 }
 
 .navigation .logo{
 	position: relative;
 	top: 12px;
 	left: 305px;
+}
+
+.header{
+	margin-top: 100px;
 }
 
 .cta{
